fixed dark mode button on mobile css

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -269,7 +269,7 @@
 
     .gg-dark-mode {
         z-index: 999;
-        position: fixed;
+        position: absolute;
         cursor: pointer;
         right: 0;
         top: 0;
